<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_my_profile_activity"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorAccent"

                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </com.google.android.material.appbar.AppBarLayout>

            <!-- This layout is just used for applying a background image to the screen below the toolbar. -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/my_profile_screen_content_marginStartEnd"
                    android:layout_marginTop="@dimen/my_profile_screen_content_marginTopBottom"
                    android:layout_marginEnd="@dimen/my_profile_screen_content_marginStartEnd"
                    android:layout_marginBottom="@dimen/my_profile_screen_content_marginTopBottom"
                    android:elevation="@dimen/card_view_elevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="@dimen/my_profile_screen_content_padding">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/iv_profile_user_image"
                            android:layout_width="@dimen/my_profile_user_image_size"
                            android:layout_height="@dimen/my_profile_user_image_size"
                            android:contentDescription="@string/image_contentDescription"
                            android:src="@drawable/ic_user_place_holder" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/my_profile_name_til_marginTop">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/et_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/name"
                                android:inputType="textPersonName"
                                android:textSize="@dimen/et_text_size" />

                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/my_profile_et_email_marginTop">

                            <!--TODO (Step 4: Here we make the email EditText as focusable false. As it should not be editable.)-->
                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/et_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="false"
                                android:focusableInTouchMode="false"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:textSize="@dimen/et_text_size" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <!-- ... Rest of the content ... -->
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/my_profile_et_mobile_marginTop">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/et_mobile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/mobile"
                                android:inputType="phone"
                                android:textSize="@dimen/et_text_size" />

                        </com.google.android.material.textfield.TextInputLayout>




                            <!-- EditText for Age -->


                        <Spinner
                            android:id="@+id/et_speciality"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            android:layout_marginTop="20dp"

                            android:entries="@array/specaility_options"
                            />

                            <!-- Spinner for Gender -->
                        <Spinner
                            android:id="@+id/spinner_gender"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            android:layout_marginTop="20dp"

                            android:entries="@array/gender_options"
                           />









                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            android:layout_marginTop="@dimen/my_profile_et_mobile_marginTop">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/et_degree"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Degree"
                                android:inputType="text"
                                android:textSize="@dimen/et_text_size" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/my_profile_et_mobile_marginTop">
                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="@dimen/my_profile_et_mobile_marginTop">

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:id="@+id/et_Interest"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="Interest"
                                    android:inputType="text"
                                    android:textSize="@dimen/et_text_size" />
                            </com.google.android.material.textfield.TextInputLayout>
                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="@dimen/my_profile_et_mobile_marginTop">

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:id="@+id/et_about"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="About"
                                    android:inputType="text"
                                    android:textSize="@dimen/et_text_size" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/et_Hospital"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Hospital Name"
                                android:inputType="text"
                                android:textSize="@dimen/et_text_size" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/my_profile_et_mobile_marginTop">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/et_Address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Address"
                                android:inputType="text"
                                android:textSize="@dimen/et_text_size" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <LinearLayout
                            xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="20dp">

                            <!-- TextView -->
                            <TextView
                                android:layout_weight="1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Availability"
                                android:textSize="16sp"
                                android:layout_gravity="center_vertical"/>

                            <!-- ToggleButton -->
                            <ToggleButton
                                android:layout_weight="1"
                                android:id="@+id/toggleButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:checked="true"
                            android:textOff="Not Available"
                            android:textOn="Available"/>

                        </LinearLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="Change Password ?"
                            android:textSize="@dimen/et_text_size"/>


                        <Button
                            android:id="@+id/btn_update"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/my_profile_btn_update_marginTop"
                            android:background="@drawable/shape_button_rounded"
                            android:foreground="?attr/selectableItemBackground"
                            android:gravity="center"
                            android:paddingTop="@dimen/btn_paddingTopBottom"
                            android:paddingBottom="@dimen/btn_paddingTopBottom"
                            android:text="@string/update"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/btn_text_size" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>